test/misc/tab.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void main() {
    // CHECK: [[@LINE+1]]:10: error: unknown identifier 'b'
	var a = b;
}
